# openhands-infra

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cdk.json  hooks  jest.config.js  package-lock.json  package.json  requirements-test.txt  security-check.sh  skills-lock.json  tsconfig.json
.claude/: hookify.require-code-review-before-push.local.md  hookify.require-e2e-tests.local.md  hookify.require-e2e-tests.md  hookify.run-code-simplifier-before-commit.local.md  settings.json
config/: config.toml  docker-compose.yml  sandbox-aws-policy.json
docker/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  apply-patch.sh  apply-startup.sh  cognito_file_conversation_store.py  cognito_sql_conversation_info_service.py  cognito_user_auth.py  download-fork-patches.sh  patch-exposed-urls.py  patch-fix.js  patch-git-changes.py  patch-resume.py  patch-vscode-url.py  s3_event_service.py  s3_secrets_store.py  s3_settings_store.py  test_apply_sdk_patches.py  test_cognito_sql_conversation_info_service.py  test_cognito_user_auth.py  test_patch_fix_git_paths.js  test_patch_git_changes.py  test_s3_event_service.py  test_s3_stores.py  test_user_config_loader.py  user_config_loader.py
docs/: ARCHITECTURE.md
lambda/user-config/: config_store.py  handler.py  pyproject.toml  requirements.txt  schemas.py  test_handler.py
lib/: AGENTS.md  CLAUDE.md  auth-stack.ts  cluster-stack.ts  compute-stack.ts  database-stack.ts  edge-stack.ts  interfaces.ts  monitoring-stack.ts  network-stack.ts  openhands-infra-stack.ts  sandbox-stack.ts  security-stack.ts  (+1 more)
(+78 files in other folders)
